adding copyright notice

--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <head>
+<!-- 
+copy right notice
+-->
 	<title>an example website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
