add simple copy right notice

--- a/simple.html
+++ b/simple.html
@@ -2,6 +2,7 @@
 <head>
 <!-- 
 copy right notice
+modify copyright notice
 -->
 	<title>an example website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
