--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 copy right notice
 modify copyright notice
 -->
-	<title>an example website</title>
+	<title>a great website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@ modify copyright notice
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			some interesting stuff goes here.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Reco 2020</p>
 	</footer>
 </body>
 </html>
