before rebase conflict changes

--- a/simple.html
+++ b/simple.html
@@ -18,7 +18,7 @@ modify copyright notice
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			some interesting stuff goes here.
+			before rebase conflict
 		</p>
 	</main>
 	<footer class="container">
