before rebase conflict changes rebased

--- a/simple.html
+++ b/simple.html
@@ -18,11 +18,11 @@ modify copyright notice
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			asdf some iddd nteresting stuff goes here.
+			some interesting stuff goes here.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Reciaako 20bb21</p>
+		<p>&copy; Reciko 2021</p>
 	</footer>
 </body>
 </html>
