mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 copy right notice
 modify copyright notice
 -->
-	<title> Very respectful website</title>
+	<title> some other conflicting change</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@ modify copyright notice
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			some interesting stuff goes here.
+			asdf some iddd nteresting stuff goes here.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Reciko 2021</p>
+		<p>&copy; Reciaako 20bb21</p>
 	</footer>
 </body>
 </html>
