--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 copy right notice
 modify copyright notice
 -->
-	<title> updating simple.html for stashing</title>
+	<title> changing simple.html for stashing</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
