--- a/simple.html
+++ b/simple.html
@@ -18,7 +18,7 @@ modify copyright notice
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			some remote changes
+			a few changes
 		</p>
 	</main>
 	<footer class="container">
